fix:deleting red border after successfuly align my section

--- a/nexcon/src/app/page.module.css
+++ b/nexcon/src/app/page.module.css
@@ -499,7 +499,7 @@
   flex-direction: column;
   align-items: center;
   background: linear-gradient(135deg, #1e3a8a 0%, #f6da7e 50%, #4f46e5 100%);
-  border: 1px solid red;
+  
 }
 
 .supportHeading {
